--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,9 @@
-<html>
+<% include partials/header %>
     
     <title> <%= title %> </title>
+
     <body>
      <h1>home page</h1>   
-    </body>
-</html>
+
+
+<% include partials/footer %>
