fixed bootstrap error

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,9 @@
 <% include partials/header%>
+<head>
+    <link rel="stylesheet" href="./stylesheet/style.css">
+        <!-- <script src="./scripts/login.js"></script> -->
+        <!-- <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script> --> -->
+</head>
 
     <title> <%= title %>> </title>
 
