--- a/views/lecturerHome.ejs
+++ b/views/lecturerHome.ejs
@@ -1,10 +1,29 @@
 <% include partials/header %>
 <% include partials/navigation %>
 
-    <div>
-        <button type="button" onclick="location.href='/lecturer/register-units';" value="Go to REGISTER">REGISTER UNIT</button>
-        <button type="button" onclick="location.href='/lecturer/class';" value="Go to CLASS">CLASS</button>
-        <button type="button" onclick="location.href='/lecturer/report';" value="Go to REPORT">REPORT</button>
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/style.css" rel="stylesheet">
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+
+                <h3 class="text-center text-success">
+                    WELCOME LECTURER!
+                </h3> 
+                <button type="button" class="btn btn-outline-primary btn-lg btn-block"><a href="/lecturer/register-units"></a>
+                    REGISTER UNITS
+                </button> 
+                <button type="button" class="btn btn-outline-primary btn-lg btn-block"><a href="/lecturer/class"></a>
+                    CLASS
+                </button> 
+                <button type="button" class="btn btn-lg btn-outline-primary btn-block"><a href="#"></a>
+                    REPORT
+                </button>
+            </div>
+        </div>
     </div>
+
+    
 
 <% include partials/footer %>
