--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,6 +11,9 @@
         
 
     </head>
-    <body>
+    <body>    
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
          
       
