--- a/views/account.ejs
+++ b/views/account.ejs
@@ -2,7 +2,7 @@
 <head>
      <link rel="stylesheet" href="./stylesheet/sign.css">
     <link rel="stylesheet" href="./stylesheet/bootstrap.min.css">
-    <script src="./scripts/signin.js"></script>
+    <script src="./scripts/signing.js"></script>
      <!-- <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>   -->
 </head>
 
