--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -8,7 +8,7 @@
 
 		<div class="dashboard">
 			<p>
-			 <a href="./signin.ejs" class="btn btn-block btn-primary btn-lg" type="button">STAFF</a>
+			 <a href="./account.ejs" class="btn btn-block btn-primary btn-lg" type="button">STAFF</a>
 			</p>
 			<p>
 			 <a href="#" class="btn btn-block btn-primary btn-lg" type="button">STUDENT</a>
