--- a/views/account.ejs
+++ b/views/account.ejs
@@ -2,35 +2,51 @@
 <head>
      <link rel="stylesheet" href="./stylesheet/sign.css">
     <link rel="stylesheet" href="./stylesheet/bootstrap.min.css">
-    <script src="./scripts/signing.js"></script>
+    <script src="./scripts/signin.js"></script>
      <!-- <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>   -->
 </head>
 
-    <title> <%= title %>> </title>
+    <title> <%= title %> </title>
+
+
 
     <div class="container-fluid">
-    <div class="main"><form class="signUp">
-        <img src="./images/avatar.png" alt="Avatar" class="avatar">
+    <div class="main">
+      <ul class="tab-group">
+        <li class="tab active"><a href="#signup">Sign Up</a></li>
+        <li class="tab"><a href="/login">Log In</a></li>
+      </ul>
+      <img src="./images/avatar.png" alt="Avatar" class="avatar">
+
+
+        <form class="signUp" action="" method="POST">
+        
         <h3>Create Your Account</h3>
         <p>Enter your email address</br>and your password for join.
         </p>
+        <p><input type="text" placeholder="Insert ID" required></p>
         <p><input class="emailbox1" type="email" placeholder="Insert e-mail" required autocomplete='off' /></p>
         <p><input type="password" id="password1"  placeholder="Insert Password" required /></p>
         <p><input type="password" id="password2" placeholder="Verify Password" required /></p>
-        <button class="btn btn-outline-primary " type="button"><a href="./login.ejs">Log In</a></button>
-        <button class="btn btn-outline-primary " type="submit">Sign Up</button>
-    </form></div>
+        <button class="btn btn-outline-success " type="reset">Reset</button>
+        <button class="btn btn-outline-success " type="submit">Sign Up</button>
+    </form>           
 
+<!-- login form -->
 
-   <!-- <div> <form class="signIn">
+    <!-- <form class="login" action="" method="POST">
         <h3>Welcome</br>Back !</h3>
         
         <input type="email" class="emailbox2" placeholder="Insert eMail" autocomplete='off' required />
         <input type="password" placeholder="Insert Password" required />
     
-        <button class="form-btn sx back" type="button">Back</button>
-        <button class="form-btn dx" type="submit">Log In</button>
-    </form></div> -->
+        <button class="btn btn-outline-success" type="button">Back</button>
+        <button class=" btn btn-outline-success" type="submit">Log In</button>
+    </form> -->
+<!-- </div>
+
+
+  
 </div>
 
 
