--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -8,10 +8,11 @@
 
 		<div class="dashboard">
 			<p>
-			 <a href="./account.ejs" class="btn btn-block btn-primary btn-lg" type="button">STAFF</a>
+			 <a href="/account" class="btn btn-block btn-primary btn-lg" type="button">STAFF</a>
 			</p>
 			<p>
-			 <a href="#" class="btn btn-block btn-primary btn-lg" type="button">STUDENT</a>
+			 <a href="/account" class="btn btn-block btn-primary btn-lg" type="button">STUDENT</a>
 			</p>
+			<p><a href="/account" class="btn btn-block btn-primary btn-lg" type="button">ADMIN</a></p>
 		</div>
-<!-- <div><%include partials/footer%></div> -->
+ <!-- <div><%include partials/footer%></div> -->
