--- a/views/class.ejs
+++ b/views/class.ejs
@@ -1,12 +1,50 @@
 <% include partials/header %>
 <% include partials/navigation %>
 
-    <div>
-        <select>
-            <!-- from database -->
-        </select>
-        <button type="button" onclick="location.href='/lecturer/class/start';" value="Go to class session">START</button>
-        <button type="button" onclick="location.href='/lecturer/class/report';" value="Go to report as per class">REPORT</button>
-    </div>
+    <button type="button" class="btn btn-lg btn-outline-secondary">
+        Start-Class
+    </button>
+    <form role="form">
+        <div class="form-group">
+            
+            <label for="exampleInputEmail1">
+                date
+            </label>
+            <input type="email" class="form-control" id="exampleInputEmail1" />
+        </div>
+        <div class="form-group">
+            
+            <label for="exampleInputPassword1">
+                time
+            </label>
+            <input type="password" class="form-control" id="exampleInputPassword1" />
+        </div>
+        <div class="form-group">
+            
+                <label for="exampleInputPassword1">
+                    No. of Students
+                </label>
+                <input type="password" class="form-control" id="exampleInputPassword1" />
+            </div>
+        <div class="form-group">
+            
+            <label for="exampleInputFile">
+                File input
+            </label>
+            <input type="file" class="form-control-file" id="exampleInputFile" />
+            <p class="help-block">
+                Example block-level help text here.
+            </p>
+        </div>
+        <div class="checkbox">
+            
+            <label>
+                <input type="checkbox" /> Check me out
+            </label>
+        </div> 
+        <button type="submit" class="btn btn-primary">
+            Submit
+        </button>
+    </form>
 
 <% include partials/footer %>
