--- a/views/account.ejs
+++ b/views/account.ejs
@@ -19,15 +19,15 @@
       <img src="./images/avatar.png" alt="Avatar" class="avatar">
 
 
-        <form class="signUp" action="" method="POST">
+        <form class="signUp" action="account" method="POST">
         
         <h3>Create Your Account</h3>
         <p>Enter your email address</br>and your password for join.
         </p>
-        <p><input type="text" placeholder="Insert ID" required></p>
-        <p><input class="emailbox1" type="email" placeholder="Insert e-mail" required autocomplete='off' /></p>
-        <p><input type="password" id="password1"  placeholder="Insert Password" required /></p>
-        <p><input type="password" id="password2" placeholder="Verify Password" required /></p>
+        <p><input type="text" id="user_id" placeholder="Insert ID" required></p>
+        <p><input class="emailbox1" type="email" id="email" placeholder="Insert e-mail" required autocomplete='off' /></p>
+        <p><input type="password" id="password"  placeholder="Insert Password" required /></p>
+        <p><input type="password" id="confirm_password" placeholder="Verify Password" required /></p>
         <button class="btn btn-outline-success " type="reset">Reset</button>
         <button class="btn btn-outline-success " type="submit">Sign Up</button>
     </form>           
