edited code to post data to the database

--- a/views/account.ejs
+++ b/views/account.ejs
@@ -24,10 +24,10 @@
         <h3>Create Your Account</h3>
         <p>Enter your email address</br>and your password for join.
         </p>
-        <p><input type="text" id="user_id" placeholder="Insert ID" required></p>
-        <p><input class="emailbox1" type="email" id="email" placeholder="Insert e-mail" required autocomplete='off' /></p>
-        <p><input type="password" id="password"  placeholder="Insert Password" required /></p>
-        <p><input type="password" id="confirm_password" placeholder="Verify Password" required /></p>
+        <p><input type="text" name="user_id" placeholder="Insert ID" required></p>
+        <p><input class="emailbox1" type="email" name="email" placeholder="Insert e-mail" required autocomplete='off' /></p>
+        <p><input type="password" name="password"  placeholder="Insert Password" required /></p>
+        <p><input type="password" name="confirm_password" placeholder="Verify Password" required /></p>
         <button class="btn btn-outline-success " type="reset">Reset</button>
         <button class="btn btn-outline-success " type="submit">Sign Up</button>
     </form>           
