--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,16 +4,17 @@
         
         <!-- STYLESHEETS -->
       
-        <link rel="stylesheet" href="./stylesheet/style.css">
+        <!-- <link rel="stylesheet" href="./stylesheet/style.css"> -->
+        <!-- <link rel="stylesheet" href="./stylesheet/bootstrap.min.css"> -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-                  <script src="./scripts/login.js"></script>
+                  <!-- <script src="./scripts/login.js"></script> -->
         
 
     </head>
     <body>    
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-12">
+                
          
       
