--- a/views/lecturerHome.ejs
+++ b/views/lecturerHome.ejs
@@ -8,15 +8,9 @@
                 <h3 class="text-center text-success">
                     WELCOME LECTURER!
                 </h3> 
-                <button type="button" class="btn btn-outline-primary btn-lg btn-block"><a href="/lecturer/register-units"></a>
-                    REGISTER UNITS
-                </button> 
-                <button type="button" class="btn btn-outline-primary btn-lg btn-block"><a href="/lecturer/class"></a>
-                    CLASS
-                </button> 
-                <button type="button" class="btn btn-lg btn-outline-primary btn-block"><a href="#"></a>
-                    REPORT
-                </button>
+                <a href="/lecturer/register-units"><button onclick="" type="button" class="btn btn-outline-primary btn-lg btn-block"></a>REGISTER UNITS</button></a> 
+                <a href="/lecturer/class"><button type="button" class="btn btn-outline-primary btn-lg btn-block">CLASS</button></a> 
+                <a href="#"><button type="button" class="btn btn-lg btn-outline-primary btn-block">REPORT</button></a>
             </div>
         </div>
     </div>
